--- a/package.json
+++ b/package.json
@@ -3,15 +3,42 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@tensorflow-models/speech-commands": "^0.5.4",
+    "@tensorflow/tfjs": "^3.19.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "assert": "^2.0.0",
+    "browserify-fs": "^1.0.0",
+    "browserify-zlib": "^0.2.0",
+    "buffer": "^6.0.3",
+    "crypto-browserify": "^3.12.0",
+    "fs-web": "^1.0.1",
+    "https-browserify": "^1.0.0",
+    "net-browserify": "^0.2.4",
+    "os-browserify": "^0.3.0",
+    "path-browserify": "^1.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
+    "rn-nodeify": "^10.3.0",
+    "stream-browserify": "^3.0.0",
+    "stream-http": "^3.2.0",
+    "tls-browserify": "^0.2.2",
+    "url": "^0.11.0",
+    "util": "^0.12.4",
     "web-vitals": "^2.1.4"
   },
+  "devDependencies": {
+    "react-scripts": "^5.0.1"
+  },
+  "browser": {
+    "fs": false,
+    "node-fetch": false,
+    "string_decoder": false,
+    "crypto": false
+  },
   "scripts": {
+    "postinstall": "node_modules/.bin/rn-nodeify --install fs, --hack",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
